--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,124 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global Variables, Start */
+
+:root {
+    --background-color: hsl(192, 100%, 11%);
+    --text-color: hsl(186, 8%, 55%);
+    --wrapper-color: hsl(194, 100%, 8%);
+    --nav-color: hsl(193, 100%, 16%);
+    --nav-link-color: hsl(31, 60%, 58%);
+}
+
+/* Global Variables, Stop */
+
+/* Reset, Start */
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+a,
+a:hover,
+a:active,
+a:visited,
+a:link {
+    text-decoration: none;
+    color: currentColor;
+}
+
+body {
+    min-height: 100svh;
+    overflow-x: hidden;
+}
+
+html {
+    font-family: Barlow, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-weight: 700;
+}
+
+img,
+picture,
+svg,
+video {
+    display: block;
+    max-width: 100%;
+}
+
+button,
+input,
+select {
+    font: inherit;
+}
+
+input {
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border-radius: 0.3125rem;
+    margin-block: 0.75rem;
+    border: 0;
+    width: 35%;
+    min-width: 15rem;
+}
+
+p,
+li {
+    max-width: 65ch;
+    line-height: 1.75rem;
+}
+
+strong {
+    font-weight: 600;
+}
+
+ul {
+    list-style-type: none;
+    margin-block: 0;
+    padding-inline: 0;
+}
+
+/* Reset, Stop */
+
+/* Global Styles, Start */
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-weight: 400;
+}
+
+main {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: start;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100svh;
+    width: 100%;
+    max-width: 60rem;
+    margin-inline: auto;
+    background-color: var(--wrapper-color);
+}
+
+/* Global Styles, Stop */
