--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -5,9 +5,9 @@
     <caption>Webbutveckling - Ramschema</caption>
     <thead>
         <tr>
-            <th>Kurskod</th>
-            <th>Kursnamn</th>   
-            <th>Progression</th>
+            <th><span (click)="sortTable('code');">Kurskod</span></th>
+            <th><span (click)="sortTable('name');">Kursnamn</span></th>   
+            <th><span (click)="sortTable('prog');">Progression</span></th>
         </tr>
     </thead>
     <tbody>
