Final check before submitting entry

--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -2,7 +2,8 @@
 
 <div class="filter">
     <label for="filter">Filtrera resultatet:</label>
-    <input type="text" id="filter" [(ngModel)]="filterValue" (input)="filterResult();" placeholder="Filtrera på kurskod eller kursnamn">
+    <input type="text" id="filter" [(ngModel)]="filterValue" (input)="filterResult();"
+        placeholder="Filtrera på kurskod eller kursnamn">
 </div>
 
 <table>
